--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/leader.yml
@@ -1,7 +1,7 @@
 # Freelancer Leader
 - type: job
   parent: CMJobBase
-  id: RMCFreelancerLeader
+  id: CMFreelancerLeader
   name: rmc-job-name-freelancer-leader
   description: rmc-ghost-role-information-freelancer-friendly-description
   playTimeTracker: RMCJobFreelancerLeader
@@ -74,7 +74,7 @@
     description: rmc-ghost-role-information-freelancer-hostile-description
     rules: rmc-ghost-role-information-freelancer-rules
     reregister: false
-    job: RMCFreelancerLeader
+    job: CMFreelancerLeader
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
@@ -89,7 +89,7 @@
     description: rmc-ghost-role-information-freelancer-friendly-description
     rules: rmc-ghost-role-information-freelancer-rules
     reregister: false
-    job: RMCFreelancerLeader
+    job: CMFreelancerLeader
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
