--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_inspector.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_inspector.yml
@@ -1,6 +1,6 @@
 ﻿- type: job
   parent: CMJobBase
-  id: RMCProvostInspector
+  id: CMProvostInspector
   name: rmc-job-name-corp-provost-inspector
   description: rmc-ghost-role-information-provost-description
   playTimeTracker: CMJobProvostInspector
@@ -46,7 +46,7 @@
     description: rmc-ghost-role-information-provost-description
     rules: rmc-ghost-role-information-provost-rules
     reregister: false
-    job: RMCProvostInspector
+    job: CMProvostInspector
     raffle:
       settings: short
   - type: GhostRoleApplySpecial
