WHJERE IS OMNI MAN

--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_hefa.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_hefa.yml
@@ -4,11 +4,11 @@
   name: HEFA ID card
   components:
   - type: PresetIdCard
-    job: RMCHEFAShrapnelsworn
+    job: CMHEFAShrapnelsworn
 
 - type: entity
   parent: RMCIDCardHEFAShrapnelsworn
   id: RMCIDCardHEFAShrapnelswornMelee
   components:
   - type: PresetIdCard
-    job: RMCHEFAShrapnelswornMelee
+    job: CMHEFAShrapnelswornMelee
