--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
@@ -197,7 +197,7 @@
   name: provost advisor ID card
   components:
   - type: PresetIdCard
-    job: RMCProvostAdvisor
+    job: CMProvostAdvisor
 
 - type: entity
   parent: RMCIDCardProvost
@@ -205,7 +205,7 @@
   name: provost enforcer ID card
   components:
   - type: PresetIdCard
-    job: RMCProvostEnforcer
+    job: CMProvostEnforcer
 
 - type: entity
   parent: RMCIDCardProvost
@@ -213,7 +213,7 @@
   name: provost team leader ID card
   components:
   - type: PresetIdCard
-    job: RMCProvostTeamLeader
+    job: CMProvostTeamLeader
 
 - type: entity
   parent: RMCIDCardProvost
@@ -221,7 +221,7 @@
   name: provost chief inspector ID card
   components:
   - type: PresetIdCard
-    job: RMCProvostChiefInspector
+    job: CMProvostChiefInspector
 
 - type: entity
   parent: RMCIDCardProvost
@@ -229,7 +229,7 @@
   name: provost deputy marshal ID card
   components:
   - type: PresetIdCard
-    job: RMCProvostDeputyMarshal
+    job: CMProvostDeputyMarshal
 
 - type: entity
   parent: RMCIDCardProvost
@@ -237,7 +237,7 @@
   name: provost inspector ID card
   components:
   - type: PresetIdCard
-    job: RMCProvostInspector
+    job: CMProvostInspector
 
 - type: entity
   parent: RMCIDCardProvost
@@ -245,7 +245,7 @@
   name: provost marshal ID card
   components:
   - type: PresetIdCard
-    job: RMCProvostMarshal
+    job: CMProvostMarshal
 
 - type: entity
   parent: CMIDCardGold
