--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/cm_id_other.yml
@@ -188,7 +188,7 @@
     job: RMCJobSynthetic
 
 - type: entity
-  parent: RMCIDCardSynth
+  parent: CMIDCardLanyard
   id: RMCIDCardSynthColony
   name: synth ID card
   suffix: Survivor
