--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/role_loadouts.yml
@@ -570,14 +570,9 @@
   - EyewearRMC
   - MasksRMC
   - HelmetGarbsRMC
+  - SynthUniformRMC
   - PaperworkRMC
   - PlushiesRMC
-  - WeaponsRMC
-  - CannedDrinksRMC
-  - FlasksRMC
-  - FoodSweetsRMC
-  - FoodPackagedRMC
-  - FoodHealthyRMC
   - RMCLoadoutGroupPins
 
 # Requsitions
