--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/role_specific.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/role_specific.yml
@@ -47,3 +47,12 @@
       inverted: true # if you have atleast 175 hours you get the colonel ID, so invert this
   equipment:
     id: CMIDCardCommandingOfficer
+
+# Synthetic
+
+- type: loadout
+  id: ScrubsBlueRMC
+  cost: 0
+  storage:
+    back:
+    - CMScrubsBlue
