oh my god i hate loadout code

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/coats.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/coats.yml
@@ -370,6 +370,12 @@
     foldedEquippedPrefix: jacket
 
 - type: entity
+  parent: CMCoatCOBomber
+  id: RMCCoatBomber
+  name: brown bomber jacket
+  description: A well-worn leather bomber jacket.
+
+- type: entity
   parent: CMCoatCO
   id: CMCoatCOFormalBlack
   name: commanding officer gray dress jacket
