--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/role_loadouts.yml
@@ -565,12 +565,13 @@
   id: JobRMCSynthetic
   points: 7
   groups:
-  - MarineBackpack
-  - HeadwearRMC
-  - EyewearRMC
+  - SynthBackpackRMC
+  - SynthHeadwearRMC
+  - SynthGlassesRMC
   - MasksRMC
   - HelmetGarbsRMC
   - SynthUniformRMC
+  - SynthSuitsRMC
   - PaperworkRMC
   - PlushiesRMC
   - RMCLoadoutGroupPins
