--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/loadout_groups.yml
@@ -329,6 +329,126 @@
   id: SynthUniformRMC
   name: rmc-loadout-group-synthetic-uniform
   minLimit: 0
-  maxLimit: 21
+  maxLimit: 1
   loadouts:
   - ScrubsBlueRMC
+  - ScrubsLightBlueRMC
+  - ScrubsGreenRMC
+  - ScrubsPurpleRMC
+  - ScrubsOliveRMC
+  - ScrubsGreyRMC
+  - ServiceUniformRMC
+  - ServiceUniformXORMC
+  - ComTechUniformRMC
+  - EngineerUniformRMC
+  - MPUniformRMC
+  - TShirtWhiteRMC
+  - TShirtGrayRMC
+  - TShirtRedRMC
+  - CivilianJumpsuitRMC
+  - WhiteServiceJumpsuitRMC
+  - LiaisonBlueJumpsuitRMC
+  - LiaisonBrownJumpsuitRMC
+  - LiaisonCorporateFormalJumpsuitRMC
+
+- type: loadoutGroup
+  id: SynthGlassesRMC
+  name: rmc-loadout-group-synthetic-glasses
+  minLimit: 0
+  maxLimit: 2
+  loadouts:
+  - AviatorsRMC
+  - EyepatchRMC
+  - GlassesRPGRMC
+  - GlassesRPGRMCOld
+  - GlassesPrescriptionRMC
+  - GogglesRMC
+  - GogglesPrescriptionRMC
+  - GogglesBlackRMC
+  - GogglesOrangeRMC # TODO add prescription variants of all the goggles
+  - GogglesAdvancedRMC
+  - GogglesM1A1RMC
+  - PersonalShadesRMC
+  - SunglassesRMC # TODO prescription sunglasses
+  - GlassesBiMexYellowRMC
+  - GlassesBiMexBronzeRMC
+  - GlassesBiMexBlackRMC
+  - GogglesRedRMC
+  - GogglesBlueRMC
+  - GogglesPurpleRMC
+  - GogglesYellowRMC
+  - GogglesPolarizedBlueRMC
+  - GogglesPolarizedOrangeRMC
+  - GogglesM1A1BlueRMC
+  - GlassesSecurityRMC
+
+- type: loadoutGroup
+  id: SynthShoesRMC
+  name: rmc-loadout-group-synthetic-shoes
+  minLimit: 0
+  maxLimit: 1
+  loadouts:
+  - BootsBlackRMC
+  - ShoesBlackRMC
+  - ShoesBrownRMC
+  - ShoesGreenRMC
+  - ShoesPurpleRMC
+  - ShoesRedRMC
+  - ShoeWhiteRMC
+  - ShoeYellowRMC
+
+- type: loadoutGroup
+  id: SynthHeadwearRMC
+  name: rmc-loadout-group-synthetic-headwear
+  minLimit: 0
+  maxLimit: 2
+  loadouts:
+  - SquadBeretRMC
+  - GreenBeretRMC
+  - TanBeretRMC
+  - BoonieRMC
+  - BoonieTanRMC
+  - CapRMC
+  - BrownHeadbandRMC
+  - GreenHeadbandRMC
+  - GrayHeadbandRMC
+  - RedHeadbandRMC
+  - TanHeadbandRMC
+  - SquadHeadbandRMC
+  - BeretEngineerRMC
+  - CapMPRMC
+  - CapQuartermasterRMC
+  - ArmorHelmetM10RMC
+
+- type: loadoutGroup
+  id: SynthSuitsRMC
+  name: rmc-loadout-group-synthetic-suits
+  minLimit: 0
+  maxLimit: 1
+  loadouts:
+  - CoatBomberRMC
+  - ExternalWebbingRMC
+  - ArmorM3VLSynthRMC
+  - HazardVestRMC
+  - HazardVestBlueRMC
+  - HazardVestYellowRMC
+  - HazardVestBlackRMC
+  - CoatServiceRMC
+  - LabcoatRMC
+  - QuartermasterJacketRMC
+  - CorporateBlackJacketRMC
+  - CorporateBrownJacketRMC
+  - CorporateBlueJacketRMC
+
+- type: loadoutGroup
+  id: SynthBackpackRMC
+  name: rmc-loadout-group-backpack
+  minLimit: 1
+  loadouts:
+  - BackpackEngineerRMC
+  - BackpackMarineMedicRMC
+  - MarineTechnicianSatchel
+  - MarineSatchel
+  - MarineLeatherSatchel
+  - MarineMedicSatchel
+  - SatchelWelderRMC
