--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
@@ -137,6 +137,18 @@
     - RMCShoesBlack
 
 - type: loadout
+  id: ShoesBrownRMC
+  storage:
+    back:
+    - RMCShoesBrown
+
+- type: loadout
+  id: ShoesRedRMC
+  storage:
+    back:
+    - RMCShoesRed
+
+- type: loadout
   id: ShoesGreenRMC
   storage:
     back:
