--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/Items/RoleSpecific/synthetic.yml
@@ -67,6 +67,12 @@
     back:
     - CMJumpsuitMP
 
+- type: loadout
+  id: DCCJumpsuitRMC
+  storage:
+    back:
+    - CMJumpsuitDCC
+
 # Civilian Jumpsuits
 - type: loadout
   id: TShirtWhiteRMC
