Added chicken & bacon to galley vendor, added several recipes to sequence_metamorph

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -539,9 +539,13 @@
       entries:
       - id: FoodContainerEgg
         amount: 12
+      - id: FoodMeatChicken
+        amount: 12
       - id: FoodMeatFish
         amount: 12
       - id: FoodMeat
+        amount: 24
+      - id: FoodMeatBacon
         amount: 24
       - id: DrinkMilkCarton
         amount: 24
