--- a/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_egg.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Xeno/xeno_egg.yml
@@ -19,11 +19,11 @@
         density: 20
         mask:
         - ItemMask
-#        layer:
+#        layer: # Added by XenoEggSystem
 #        - BulletImpassable
         restitution: 0.3
         friction: 0.2
-#      xeno_egg:
+#      xeno_egg: # Added by XenoEggSystem
 #        shape:
 #          !type:PhysShapeCircle
 #          radius: 1.5
