--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
@@ -356,6 +356,12 @@
     radioTextIncrease: 3
 
 - type: entity
+  parent: CMHeadsetHighCommand
+  id: RMCHeadsetHighCommandProvostLead
+  components:
+  - type: GrantSquadLeaderTracker
+
+- type: entity
   parent: CMHeadsetSeniorCommand
   id: RMCHeadsetSEA
   name: marine senior enlisted advisor headset
