--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/High_Command/high_command_adjutant.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/High_Command/high_command_adjutant.yml
@@ -76,5 +76,5 @@
   id: RMCJobIconUNMCAdjutant
   icon:
     sprite: _RMC14/Interface/cm_job_icons.rsi
-    state: hudadjutant
+    state: rmc_adjutant
 
