Tracker for new ghost roles

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
@@ -51,6 +51,8 @@
   - type: GrantSquadLeaderTracker
     defaultMode: LeaderPmc
     trackerModes:
+    - SupervisorWeYaExecutive
+    - SupervisorWeYaSpecialist
     - DirectorPmc
     - LeaderPmc
     - CorporateLiaison
@@ -87,6 +89,61 @@
     - LeaderPmc
     - CorporateLiaison
 
+# For WeYa lawyers
+- type: entity
+  parent: RMCHeadsetIcons
+  id: RMCHeadsetDistressGoon
+  name: We-Ya headset
+  description: A special headset used by corporate personnel.
+  components:
+  - type: ContainerFill
+    containers:
+      key_slots:
+      - CMEncryptionKeyCommon
+      - RMCEncryptionKeyLiaison
+  - type: GrantMarineIcons
+  - type: GrantTacMapAlert
+  - type: GrantSquadLeaderTracker
+    defaultMode: LeaderGoon
+    trackerModes:
+    - SupervisorWeYaExecutive
+    - SupervisorWeYaSpecialist
+    - SupervisorWeYa
+    - LawyerWeYa
+    - LeaderGoon
+
+- type: entity
+  parent: RMCHeadsetDistressGoon
+  id: RMCHeadsetDistressGoonLeader
+  suffix: Leader
+  description:
+  components:
+  - type: RMCHeadset
+    radioTextIncrease: 2
+
+- type: entity
+  parent: RMCHeadsetIcons
+  id: RMCHeadsetDistressLawyerWeYa
+  name: We-Ya headset
+  description: A special headset used by corporate personnel.
+  suffix: Director
+  components:
+  - type: ContainerFill
+    containers:
+      key_slots:
+      - CMEncryptionKeyCommon
+      - RMCEncryptionKeyLiaison
+  - type: GrantMarineIcons
+  - type: GrantTacMapAlert
+  - type: RMCHeadset
+    radioTextIncrease: 3
+  - type: GrantSquadLeaderTracker
+    defaultMode: LeaderGoon
+    trackerModes:
+    - SupervisorWeYa
+    - LawyerWeYa
+    - LeaderGoon
+
 # For Duke's Dozen/Freelancer
 - type: entity
   parent: RMCHeadsetIcons
@@ -99,6 +156,10 @@
       key_slots:
       - RMCEncryptionKeyDukes
   - type: GrantMarineIcons
+  - type: GrantSquadLeaderTracker
+    defaultMode: FreelancerLeader
+    trackerModes:
+    - FreelancerLeader
 
 - type: entity
   parent: RMCHeadsetDistressDukes
