--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/goon.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/goon.yml
@@ -34,7 +34,7 @@
   id: RMCJobWeYaGoon
   equipment:
     id: RMCIDCardPMC
-    ears: RMCHeadsetDistressPMC
+    ears: RMCHeadsetDistressGoon
     jumpsuit: RMCJumpsuitVeteranPMCCorporate
     outerClothing: CMArmorM4PMCCorporate
     gloves: RMCHandsVeteranPMC
