--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/lawyer_supervisor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/lawyer_supervisor.yml
@@ -25,6 +25,7 @@
         RMCSkillFirearms: 0
         RMCSkillEndurance: 0
         RMCSkillVehicles: 1
+    - type: RMCTrackable
 
 - type: playTimeTracker
   id: RMCJobWeYaLawyerSupervisor
@@ -33,7 +34,7 @@
   id: RMCJobWeYaLawyerSupervisor
   equipment:
     id: RMCIDCardPMC
-    ears: RMCHeadsetDistressPMC
+    ears: RMCHeadsetDistressLawyerWeYa
     jumpsuit: CMJumpsuitLiaisonBlack
     # TODO RMC14 "neck: black tie"
     outerClothing: RMCJacketCorporateBlack
