--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/drone.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/drone.yml
@@ -194,6 +194,7 @@
     name: rmc-xeno-gardener-name
     description: rmc-xeno-gardener-description
     popup: rmc-xeno-gardener-popup
+    strainOf: CMXenoDrone
   - type: XenoFruitPlanter
     canPlant:
     - XenoFruitGreater
@@ -272,6 +273,7 @@
     name: rmc-xeno-healer-name
     description: rmc-xeno-healer-description
     popup: rmc-xeno-healer-popup
+    strainOf: CMXenoDrone
   - type: XenoFruitPlanter
     fruitChoice: XenoFruitLesser
     canPlant:
