add disarming and gun discharging

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -149,7 +149,6 @@
         type: ViewIntelObjectivesBui
   - type: Infectable
   - type: Tackleable
-  - type: Tackle
   - type: XenoNestable
   - type: Devourable
   - type: ImmuneToClothingRequiredStepTrigger
@@ -350,4 +349,6 @@
   - type: RMCRest
   - type: RMCMeleeDamageSkill
   - type: RMCStripTimeSkill
+  - type: RMCDisarm
+  - type: RMCDisarmable
   - type: StunOnExplosionReceived # TODO should also cause hearing loss
