--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -64,7 +64,7 @@
       attackRate: 1
       damage:
         types:
-          Blunt: 52.5 # 35 base damage, this is because they have melee weapons 2
+          Blunt: 35
     - type: Synth
       generation: rmc-species-synth-generation-second
       welderDamageToRepair:
@@ -97,6 +97,7 @@
       - type: Dna
       - type: InjectableSolution
       - type: IVDripTarget
+      - type: RMCSuicide
   hidden: true
 
 - type: startingGear
