--- a/Resources/Prototypes/Entities/Mobs/Player/guardian.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/guardian.yml
@@ -95,8 +95,10 @@
         collection: Punch
       damage:
         types:
-          Blunt: 20
+          Blunt: 40
           Structural: 20
+    - type: CMArmorPiercing
+      amount: 100
     - type: MeleeSpeech
     - type: UserInterface
       interfaces:
