--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -98,6 +98,7 @@
       - type: InjectableSolution
       - type: IVDripTarget
       - type: RMCSuicide
+        damage: { }
   hidden: true
 
 - type: startingGear
