--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
@@ -104,6 +104,7 @@
       - type: InjectableSolution
       - type: IVDripTarget
       - type: RMCSuicide
+        damage: { }
   hidden: true
 
 - type: startingGear
