Airburst grenades now use the physics system to determine their rebound angle.

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Launchers/m74_airburst_grenades.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Launchers/m74_airburst_grenades.yml
@@ -157,10 +157,9 @@
         shape:
           !type:PhysShapeAabb
           bounds: "-0.15,-0.45,0.15,0.15"
-        hard: false
         mask:
-        - Impassable
-        - BulletImpassable
+        - ItemMask
+        restitution: 1
   - type: IgnorePredictionHide
 
 - type: entity
@@ -276,7 +275,7 @@
     sound: /Audio/Effects/smoke.ogg
   - type: DeleteOnTrigger
 
-#Payloads
+#Payload projectiles
 - type: entity
   parent: RMCBaseBullet
   id: RMCStarShellBullet
