--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/liaison.yml
@@ -41,6 +41,7 @@
     - type: NpcFactionMember
       factions:
       - WeYa
+      - UNMC
     - type: Skills
       skills:
         RMCSkillFirearms: 0
