--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/corporate_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/corporate_survivor.yml
@@ -37,6 +37,7 @@
     - type: NpcFactionMember
       factions:
       - WeYa
+      - Survivor
     - type: IntelRescueSurvivorObjective
 
 - type: startingGear
