Base done and graph

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/rollerbeds.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/rollerbeds.yml
@@ -5,7 +5,29 @@
   id: CMRollerBed
 
 - type: entity
-  parent: RollerBed
+  id: RMCRollerBedDestruction
+  abstract: true
+  components:
+  - type: Damageable
+    damageContainer: StructuralMarine
+    damageModifierSet: StructuralMarine
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 100
+      behaviors:
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: ReceiverXenoClaws
+    minimumClawStrength: Normal
+    hitsToDestroy: 1
+  - type: Construction
+    graph: RMCRollerBed
+    node: Metal
+
+- type: entity
+  parent: [ RMCRollerBedDestruction, RollerBed ]
   id: CMRollerBed
   name: roller bed
   description: A collapsed roller bed that can be carried around.
@@ -50,6 +72,9 @@
     slots:
     - suitstorage
   - type: RMCStrapNoDrawDepthChange
+  - type: PhysicalComposition
+    materialComposition:
+      RMCPlastic: 250
 
 - type: entity
   parent: CMRollerBed
@@ -80,6 +105,11 @@
       map: [ "buckledLayer" ]
       visible: false
   - type: Appearance
+  - type: ReceiverXenoClaws
+    minimumClawStrength: ImpossiblySharp
+  - type: PhysicalComposition
+    materialComposition:
+      RMCPlastic: 300
 
 - type: entity
   parent: CMPortableSurgicalBed
@@ -93,7 +123,7 @@
 
 # Copied most of RollerBed prototype except for pullable
 - type: entity
-  parent: [ BaseDeployFoldable ]
+  parent: [ RMCRollerBedDestruction, BaseDeployFoldable ]
   id: RMCMedevacStretcher
   name: medevac stretcher
   description: A collapsible stretcher that can be activated to send patients to an overhead dropship.
@@ -168,6 +198,12 @@
   - type: Tag
     tags:
     - CMRollerItem
+  - type: ReceiverXenoClaws 
+    minimumClawStrength: ImpossiblySharp
+  - type: PhysicalComposition
+    materialComposition:
+      RMCPlastic: 250
+      CMSteel: 133
 
 - type: entity
   parent: RMCMedevacStretcher
