--- a/Resources/Prototypes/_RMC14/Entities/Objects/Misc/paper.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Misc/paper.yml
@@ -176,3 +176,17 @@
     headerImagePath: "/Textures/_RMC14/Interface/Paper/paper_heading_requisition_invoice.svg.96dpi.png"
     headerMargin: 0.0, 12.0, 0.0, 0.0
   - type: RequisitionsInvoice
+
+- type: entity
+  parent: CMPaperWritten
+  id: RMCPaperWeYa
+  name: weston-yamada official document
+  components:
+  - type: Paper
+    content: cl-briefing-kutjevo
+  - type: PaperVisuals
+    headerImagePath: "/Textures/_RMC14/Interface/Paper/paper_heading_weya.svg.96dpi.png"
+    backgroundImagePath: "/Textures/Interface/Paper/paper_background_default.svg.96dpi.png"
+    contentImagePath: "/Textures/Interface/Paper/paper_content_lined.svg.96dpi.png"
+    backgroundPatchMargin: 16.0, 16.0, 16.0, 16.0
+    contentMargin: 16.0, 16.0, 16.0, 16.0
