--- a/Resources/Prototypes/Recipes/Reactions/drinks.yml
+++ b/Resources/Prototypes/Recipes/Reactions/drinks.yml
@@ -29,7 +29,7 @@
       amount: 2
     Vodka:
       amount: 2
-    Iron:
+    RMCIron:
       amount: 1
   products:
     Amasec: 5
@@ -181,7 +181,7 @@
   requiredMixerCategories:
   - Shake
   reactants:
-    Iron:
+    RMCIron:
       amount: 1
     JuiceLime:
       amount: 1
@@ -1219,7 +1219,7 @@
       amount: 1
   products:
     Cola: 4
-    
+
 - type: reaction
   id: Caipirinha
   requiredMixerCategories:
