Guidebook and Spec Entries

--- a/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
+++ b/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
@@ -44,6 +44,7 @@
   - RMCGuideRoleMaintenanceTechnician
   - RMCGuideRoleSGO
   - RMCGuideCommandRoles
+  - RMCGuideRoleSpec
 
 # marine structures
 - type: guideEntry
@@ -162,6 +163,46 @@
   priority: 10
   name: "Who is in Command?"
   text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideCommandRoles.xml"
+
+- type: guideEntry
+  parent: RMC
+  id: RMCGuideRoleSpec
+  priority: 11
+  name: "Specialists"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleSpec.xml"
+  children:
+  - RMCGuideRoleSpecDemo
+  - RMCGuideRoleSpecGrenadier
+  - RMCGuideRoleSpecScout
+  - RMCGuideRoleSpecSniper
+
+- type: guideEntry
+  parent: RMC
+  id: RMCGuideRoleSpecDemo
+  priority: 1
+  name: "Demolitionist Specialist"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleSpecDemo.xml"
+
+- type: guideEntry
+  parent: RMC
+  id: RMCGuideRoleSpecGrenadier
+  priority: 2
+  name: "Heavy Grenadier Specialist"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleSpecGrenadier.xml"
+
+- type: guideEntry
+  parent: RMC
+  id: RMCGuideRoleSpecScout
+  priority: 3
+  name: "Scout Specialist"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleSpecScout.xml"
+
+- type: guideEntry
+  parent: RMC
+  id: RMCGuideRoleSpecSniper
+  priority: 4
+  name: "Sniper Specialist"
+  text: "/ServerInfo/Guidebook/_RMC14/Guides/RMCGuideRoleSpecSniper.xml"
 
 # Chemistry stuff
 - type: guideEntry
