--- a/Resources/Prototypes/_RMC14/Entities/Structures/orbital_cannon.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/orbital_cannon.yml
@@ -159,6 +159,7 @@
       slope: 10
       max: 90
       delay: 0.6
+      explosionEffect: RMCExplosionEffectClusterOB
   - type: WarpPoint
     location: 1 orbital bombardment
 
