Re-enable incend ob

--- a/Resources/Prototypes/_RMC14/Entities/Structures/orbital_cannon.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/orbital_cannon.yml
@@ -132,7 +132,7 @@
     prototypes:
     - RMCOrbitalCannonWarheadExplosive
     - RMCOrbitalCannonWarheadCluster
-#    - RMCOrbitalCannonWarheadIncendiary # TODO RMC14 incend
+    - RMCOrbitalCannonWarheadIncendiary
 
 - type: entity
   parent: MarkerBase
